--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -22,7 +22,7 @@ favicon: /assets/icons/icon-book.svg
 
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: /img/fluid.png
+apple_touch_icon: /assets/icons/icon-book.svg
 
 # 浏览器标签页中的标题分隔符，效果：文章名 - 站点名
 # Title separator in browser tab, eg: article - site
@@ -975,7 +975,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /assets/imgs/Saber.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
   avatar: /img/avatar.png
