--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -997,7 +997,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/default.png
+  banner_img: /assets/imgs/Furina.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -1008,7 +1008,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /assets/imgs/Furina.png
   banner_img_height: 85
   banner_mask_alpha: 0.3
   # 重定向到首页的延迟(毫秒)
@@ -1022,7 +1022,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/default.png
+  banner_img: /assets/imgs/Furina.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
   # 友链的成员项
