--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -63,8 +63,8 @@ code:
       # 在链接中挑选 style 填入
       # Select a style in the link
       # See: https://highlightjs.org/demo/
-      style: "monokai"
-      style_dark: "monokai"
+      style: "atom-one-light"
+      style_dark: "atom-one-light"
 
     prismjs:
       # 在下方链接页面右侧的圆形按钮挑选 style 填入，也可以直接填入 css 链接
